linux (4.12.2-1~exp2) UNRELEASED; urgency=medium

  * media: Enable USB_RAINSHADOW_CEC as module (see #868511)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 Jul 2017 13:26:41 +0100

linux (4.12.2-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.12
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.12.1
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.12.2

  [ Ben Hutchings ]
  * Add script to regenerate lockdown patch series from git
  * [rt] Disable until it is updated for 4.12 or later
  * scripts/mod: Update modpost wrapper for 4.12
  * Set ABI name to trunk

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 Jul 2017 12:19:38 +0100

linux (4.11.11-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.11.7
    - fs: pass on flags in compat_writev
    - configfs: Fix race between create_link and configfs_rmdir
    - can: gs_usb: fix memory leak in gs_cmd_reset()
    - ila_xlat: add missing hash secret initialization
    - cpufreq: conservative: Allow down_threshold to take values from 1 to 10
    - vb2: Fix an off by one error in 'vb2_plane_vaddr'
    - cec: race fix: don't return -ENONET in cec_receive()
    - selinux: fix double free in selinux_parse_opts_str()
    - mac80211: don't look at the PM bit of BAR frames
    - mac80211/wpa: use constant time memory comparison for MACs
    - [x86] drm/amdgpu: Fix overflow of watermark calcs at > 4k resolutions.
    - [x86] drm/i915: Fix GVT-g PVINFO version compatibility check
    - [x86] drm/i915: Fix scaling check for 90/270 degree plane rotation
    - [x86] drm/i915: Do not sync RCU during shrinking
    - mac80211: fix IBSS presp allocation size
    - mac80211: strictly check mesh address extension mode
    - mac80211: fix dropped counter in multiqueue RX
    - mac80211: don't send SMPS action frame in AP mode when not needed