@@ -1,6 +1,8 @@
 linux (4.12.2-1~exp2) UNRELEASED; urgency=medium
 
   * media: Enable USB_RAINSHADOW_CEC as module (see #868511)
+  * [sparc64] Update "Revert "sparc: move exports to definitions"" again
+    (really fixes FTBFS)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 Jul 2017 13:26:41 +0100
 
